dev/clusters/kind-macula-hub/apps/console/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: macula-console
  namespace: macula
spec:
  replicas: 1
  selector:
    matchLabels:
      app: macula-console
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-01-20T17:05:00Z"
      labels:
        app: macula-console
    spec:
      containers:
      - name: console
        image: maculacid/macula-console:bf8530d
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 4000
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /app/data
        - name: projects
          mountPath: /projects
          readOnly: true
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: console-data
      - name: projects
        hostPath:
          path: /home/rl/work
          type: Directory
