dev/clusters/kind-macula-hub/apps/console/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: macula-console
  namespace: macula
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4000
    protocol: TCP
  selector:
    app: macula-console
